@@ -1,5 +1,10 @@
 2004-10-02  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit-file.c: don't interpret escaped sequences in a filename
+	as markup.
+
+2004-10-02  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit-file.c:
 	* gedit-file-selector-util.c:
 	* gedit-mdi.c:
